# SpatialArchive

./: README.md
FinalCode/: CMakeLists.txt  MongoDBClient.cpp  MongoDBClient.h  main_simple.cpp  main_test.cpp  mesheditor.cpp  mesheditor.hpp  stlviewer.cpp  stlviewer.h
MeshFiles/: SMap.stl  output.stl  spatialMesh.stl
Unity/: GetBinarySTL.cs
backend/: CMakeLists.txt  MongoDBClient.cpp  MongoDBClient.h  backend.cpp  backend.h  backend_main.cpp  backend_test.cpp  main.cpp  program_test.cpp
